added custom css for custom controls

--- a/test/index-mock.html
+++ b/test/index-mock.html
@@ -4,15 +4,6 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta charset="utf-8">
 		<title>Walkthrough - Test page</title>
-		<style>
-				.scrollableGridLayout{
-					overflow: auto;
-				}
-				.trendControlListItem{
-					/* background-color: rgb(88, 153, 218) !important; */
-					height:480px !important;
-				}
-		</style>
 		<script
 			id="sap-ui-bootstrap"
 			src="/resources/sap-ui-core.js"
@@ -25,6 +16,8 @@
 				"com.dla.webstat": "/"
 			}'>
 		</script>
+		<link rel="stylesheet" type="text/css" href="../control/styles.css">
+		<!-- <script type="css/" -->
 		<script>
 			sap.ui.getCore().attachInit(function () {
 				sap.ui.require([
